--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-This file was created by IntelliJ IDEA 12.1.4 for binding GitHub repository
+This example contains JSON-P examples
+
+Sample1: Java API for JSON Processing – Creating JSON Objects
+Sample2: Java API for JSON Processing – Reading and Writing JSON objects
